使用 Colaboratory 建立

--- a/期中實作_會計一Ａ_孫嬿晴_410601271.ipynb
+++ b/期中實作_會計一Ａ_孫嬿晴_410601271.ipynb
@@ -177,28 +177,28 @@
     {
       "cell_type": "code",
       "source": [
-        "身高 =  int(input('請輸入您的身高(cm):'))\n",
-        "體重 =  int(input('請輸入您的體重(kg):'))\n",
+        "身高 =  int(input('請輸入您的身高(cm): '))\n",
+        "體重 =  int(input('請輸入您的體重(kg): '))\n",
         "BMI =  體重/(身高/100)**2\n",
         "\n",
-        "print('身高%d公分,體重%d公斤,BMI值為%0.3f'%(身高,體重,BMI))"
+        "print('身高 %d 公分,體重 %d 公斤,BMI值為 %0.3f'%(身高,體重,BMI))"
       ],
       "metadata": {
         "id": "ghcnJfRAh7zA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f7b1541-0f7b-401d-9d21-ac5ac9119156"
+        "outputId": "f2b3ec87-d585-4040-945d-5f8f4aa63821"
       },
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入您的身高(cm):180\n",
-            "請輸入您的體重(kg):60\n",
-            "身高180公分,體重60公斤,BMI值為18.519\n"
+            "請輸入您的身高(cm): 180\n",
+            "請輸入您的體重(kg): 60\n",
+            "身高 180 公分,體重 60 公斤,BMI值為 18.519\n"
           ]
         }
       ]
@@ -293,25 +293,25 @@
         "tem = float(input('請輸入你的體溫'))\n",
         "\n",
         "if(tem>37.5 or tem<36):\n",
-        "  print('“體溫異常,請重新量測!“')\n",
+        "  print('體溫異常，請重新量測!')\n",
         "else:\n",
-        "  print('“體溫正常，請進校園!“')"
+        "  print('體溫正常，請進校園!')"
       ],
       "metadata": {
         "id": "rPA8MYt8h8-Q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cd5d99f4-d0c7-4f65-cc19-2d361f07841c"
+        "outputId": "3ea998aa-2640-4dd1-a8a2-852bb3d37dbb"
       },
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入你的體溫34\n",
-            "“體溫異常,請重新量測!“\n"
+            "體溫異常，請重新量測!\n"
           ]
         }
       ]
@@ -322,25 +322,25 @@
         "tem = float(input('請輸入你的體溫'))\n",
         "\n",
         "if(tem>37.5 or tem<36):\n",
-        "  print('“體溫異常,請重新量測!“')\n",
+        "  print('體溫異常，請重新量測!')\n",
         "else:\n",
-        "  print('“體溫正常，請進校園!“')"
+        "  print('體溫正常，請進校園!')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nzGF--DzFvZF",
-        "outputId": "b1a2beb0-3181-4286-94fd-378e0685ad1a"
+        "outputId": "e71418ec-2843-44d6-d6de-2094cf8ea60b"
       },
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入你的體溫37.4\n",
-            "“體溫正常，請進校園!“\n"
+            "體溫正常，請進校園!\n"
           ]
         }
       ]
