--- a/0530.ipynb
+++ b/0530.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0530.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyML250V/pjgXLIjxRYJj5Er",
+      "authorship_tag": "ABX9TyP1sHZvTnVac+qJcUWNVaus",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "BGu8Md2MA5v2"
       },
@@ -54,7 +54,7 @@
         "id": "loVrw_9aA-vb",
         "outputId": "da13cb83-f7b7-48b6-a8b3-10faf0f41bd2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
         "id": "_CHXOqZ3A-x7",
         "outputId": "28ffe168-b67d-409e-87d4-263397d4d8f4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "KKxXvLSVA-0Y",
         "outputId": "0374a6e4-3d35-4e18-9e44-70830320c704"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "tXsj7lO4A-2y",
         "outputId": "41f2b2ef-f755-4bec-ff90-80f0f40c92c3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
         "id": "8V3WFF6bA-5G",
         "outputId": "8a50b0da-05d6-4675-b570-daa829a8dd4d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "id": "8M35g2DtA-7j",
         "outputId": "a0681323-05d8-4dbe-b568-c8d59277d79f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         "id": "UD9-7BsFA-99",
         "outputId": "5405f1a2-0730-4caa-ac81-338d9ed3cd2b"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
         "id": "KhFd57iaA_AZ",
         "outputId": "09f7a979-5c88-4920-d15b-2e269d48a11b"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "T9dNRQSNA_DS",
         "outputId": "8c88f4b4-3151-456e-fb5c-0c1f76d119f9"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
         "id": "RdZy-SklA_F6",
         "outputId": "039f99a0-be06-4a21-e3b6-b96a5d6404a5"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,19 +350,20 @@
       "source": [
         "n = int(input('請輸入正整數：'))\n",
         "a = []\n",
+        "b = 2\n",
         "for i in range(1,n+1):\n",
         "  if n % i == 0:\n",
         "    a.append(i)\n",
         "    continue\n",
         "print(str(n)+'的因數有',a)\n",
         "\n",
-        "while 2 < n:\n",
+        "while b < n:\n",
         "  if n % 2 == 0:\n",
         "    print(n,'不是質數')\n",
         "    break\n",
-        "  c += 1\n",
+        "  b += 1\n",
         "\n",
-        "if c == n:\n",
+        "if b == n:\n",
         "  print(n,'是質數')"
       ],
       "metadata": {
@@ -370,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "giTKMnCIVMg7",
-        "outputId": "47e340b5-72a3-4ccd-ada8-b9c5cc50c4d4"
+        "outputId": "dc8e090a-d8be-462c-abe1-067d18eb57bf"
       },
-      "execution_count": 93,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +414,7 @@
         "id": "VcdqEJdOVMjX",
         "outputId": "5a452f3c-9b82-4f66-b3c8-39d1cc3540bb"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
