使用 Colaboratory 建立

--- a/0530.ipynb
+++ b/0530.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0530.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP1sHZvTnVac+qJcUWNVaus",
+      "authorship_tag": "ABX9TyMC/Taae3GF9NeRmv2VYyLb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,7 +373,7 @@
         "id": "giTKMnCIVMg7",
         "outputId": "dc8e090a-d8be-462c-abe1-067d18eb57bf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,9 +412,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VcdqEJdOVMjX",
-        "outputId": "5a452f3c-9b82-4f66-b3c8-39d1cc3540bb"
+        "outputId": "2163bc05-50d1-4317-9f5b-f1e8351eaa27"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,6 +422,86 @@
           "text": [
             "請輸入正整數：11\n",
             "11的因數有 [1, 11]\n",
+            "11 是質數\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"請輸入正整數: \"))\n",
+        "li = list()\n",
+        "i=1\n",
+        "while i <= n:\n",
+        "    if n%i ==0:\n",
+        "      li.append(i)\n",
+        "    i=i+1\n",
+        "print(n,\"的因數有\",end='')\n",
+        "for j in range(len(li)):\n",
+        "    print(li[j] ,end =' ')\n",
+        "print()\n",
+        "\n",
+        "if len(li) > 2:\n",
+        "    print(n,'不是質數')\n",
+        "else:\n",
+        "    print(n,'是質數')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MUuv4I416i8F",
+        "outputId": "02b7f30a-105f-45f9-aa5d-ba7090bb72b4"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入正整數: 12\n",
+            "12 的因數有1 2 3 4 6 12 \n",
+            "12 不是質數\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"請輸入正整數: \"))\n",
+        "li = list()\n",
+        "i=1\n",
+        "while i <= n:\n",
+        "    if n%i ==0:\n",
+        "      li.append(i)\n",
+        "    i=i+1\n",
+        "print(n,\"的因數有\",end='')\n",
+        "for j in range(len(li)):\n",
+        "    print(li[j] ,end =' ')\n",
+        "print()\n",
+        "\n",
+        "if len(li) > 2:\n",
+        "    print(n,'不是質數')\n",
+        "else:\n",
+        "    print(n,'是質數')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fqRgN43DDwtn",
+        "outputId": "9c144141-f9ce-4862-c683-ac1ea09b952b"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入正整數: 11\n",
+            "11 的因數有1 11 \n",
             "11 是質數\n"
           ]
         }
